<resources>
	<!-- App text configuration -->
    <string name="app_name">Ecommerce Android App</string>
    
    <!--  App About Information -->
    <string name="app_version">Version 1.2.0</string>   
    <string name="copyright">Copyright &#169; Wajeeh Ul Hassan Developer \n All rights reserved</string>
    <string name="email_address">wajeehulhassan82@gmail.com</string>

	<!-- Parse push notification -->
	<string name="parse_application_id">V0c7q2d6VCVuc0LXZmk3ZZbUjI4UMhIrgWmekZxP</string>
	<string name="parse_client_key">VjtLo0qel4L3hpWSModBkBB4oPEUUEZHikHOVo7z</string>
    
    <!-- play store application in more apps -->
    <string name="more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_phone">Your device does not support phone call feature</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="category_list">Choose Category</string>
    <string name="search">Search Menu</string>
	<string name="detail">Detail</string>
	<string name="add">Add this to my order</string>
	<string name="share_btn">Share this</string>
	<string name="share">Share</string>
	<string name="contact">Contact Us</string>
	<string name="callus">Call us</string>
    <string name="alert">Failed to connect internet!</string>
    <string name="not_found">Not Found!</string>
    <string name="number_order">Number of order : </string>
    <string name="order">Order</string>
    <string name="my_order">Detail Order</string>
    <string name="total_order">Total Order :</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
	<string name="clear_one_order">Do you want to clear this order?</string>
	<string name="db_exist_alert">Do you want to remove your previous order?</string>
	<string name="confirm">Confirmation</string>
	<string name="reservation">Reservation</string>
	<string name="your_name">Your Name</string>
	<string name="address">Your Address</string>
	<string name="city">Your City</string>
	<string name="province">Your Province</string>
	<string name="email">Your Email</string>
	<string name="number_of_people">Number of people</string>
	<string name="date">Set Date</string>
	<string name="time">Set Time</string>
	<string name="phone_number">Phone Number</string>
	<string name="order_list">Order List</string>
	<string name="send_reservation">Send</string>
	<string name="form_alert">Please, complete the form first.</string>
	<string name="sending_alert">Sending data. Please wait &#8230;</string>
	<string name="ok_alert">Your Order has been successfully sent.</string>
	<string name="failed_alert">Your Order has not been sent.</string>
	<string name="no_order">Your Cart is Empty, Please Order first.</string>
	<string name="check_order_later">Check if you want to order later</string>
	<string name="order_later">#Order later</string>
	 <string name="desc_list_item_icon">Item Icon</string>
	<string name="no_order_menu">No order</string>
	<string name="order_alert">You have not ordered yet</string>
	<string name="add_comment">Comment (Optional)</string>
	<string name="menu_settings">Settings</string>
	<string name="app_info">App Info</string>
	<string name="main_menu">Main Menu</string>
	<string name="title_activity_home">Home</string>
	<string name="more">More Apps</string>
	<string name="rate">Rate Apps</string>
	<string-array name="main_menu_list">
        <item >List Menu</item>
        <item >Your Order</item>
        <item >Confirmation</item>
    </string-array>
    
	<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>   
    
	<string name="menu_product">Product</string>
	<string name="menu_cart">Cart</string>
	<string name="menu_checkout">Checkout</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_info">Information</string>
	<string name="menu_about">About</string>
	<string name="menu_share">Share</string>
	<string name="menu_contact">Contact</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Product</item>
        <item>Cart</item>
        <item>Checkout</item>
        <item>Profile</item>
        <item>Information</item>
        <item>About</item>
        <item>Share</item>
        <item>Contact</item>
        <item>Exit</item>       
    </string-array>
    
    <!-- Nav Drawer List Item Icons, keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>       
        <item>@drawable/ic_product</item>
        <item>@drawable/ic_cart</item>
        <item>@drawable/ic_checkout</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_info</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_share</item>
        <item>@drawable/ic_contact</item>
        <item>@drawable/ic_exit</item>
    </array>
      
	<!-- Write your description about profile menu for tab 1 and tab 2 -->
	<string name="profile_tab1">    
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>	
	<string name="profile_tab2">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	
	<!-- Write your description about information menu for tab 1, tab 2 and tab 3 -->
	<string name="information_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>	
	<string name="information_tab2">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>	
	<string name="information_tab3">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	
	<!-- Write your description if order sent successfully -->
	<string name="success_order">
		Thankyou very much, Your Order has been successfully sent.
		</string>
	
</resources>